--- a/puppeteer/Dockerfile
+++ b/puppeteer/Dockerfile
@@ -2,6 +2,10 @@ FROM node:18-slim
 
 WORKDIR /usr/app
 
+# Override the default yarn v1.22 version as shipped by the baseline node:18-slim image
+ENV YARN_VERSION 4.4.1
+RUN yarn policies set-version $YARN_VERSION
+
 # Install latest chrome dev package and fonts to support major charsets (Chinese, Japanese, Arabic, Hebrew, Thai and a few others)
 # Note: this installs the necessary libs to make the bundled version of Chromium that Puppeteer
 # installs, work.
