--- a/puppeteer/Dockerfile
+++ b/puppeteer/Dockerfile
@@ -2,10 +2,6 @@ FROM node:18-slim
 
 WORKDIR /usr/app
 
-# Override the default yarn v1.22 version as shipped by the baseline node:18-slim image
-ENV YARN_VERSION 4.4.1
-RUN yarn policies set-version $YARN_VERSION
-
 # Install latest chrome dev package and fonts to support major charsets (Chinese, Japanese, Arabic, Hebrew, Thai and a few others)
 # Note: this installs the necessary libs to make the bundled version of Chromium that Puppeteer
 # installs, work.
@@ -28,7 +24,7 @@ RUN chmod +x /usr/local/bin/dumb-init
 # ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
 
 # Enable corepack so that yarn can downloaded/installed during the CI run.
-RUN corepack enable
+RUN corepack enable && corepack install -g yarn@^4.4.1
 
 # Add user so we don't need --no-sandbox.
 RUN groupadd -r pptruser && useradd -r -g pptruser -G audio,video pptruser \
