--- a/puppeteer/Dockerfile
+++ b/puppeteer/Dockerfile
@@ -1,5 +1,6 @@
 FROM cimg/node:18.20-browsers
 WORKDIR /usr/app
+USER root
 
 # Install latest chrome dev package and fonts to support major charsets (Chinese, Japanese, Arabic, Hebrew, Thai and a few others)
 # Note: this installs the necessary libs to make the bundled version of Chromium that Puppeteer
