--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -1,6 +1,7 @@
 FROM debian:bookworm
 
-RUN apt-get update && apt-get install -y ansible git openssh-client
+RUN apt-get update && apt-get install -y ansible git openssh-client python3-pip \
+	&& pip3 install --break-system-packages aiohttp github-webhook pyyaml ruamel.yaml slackweb
 
 RUN ansible-playbook --version
 
